<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shell" >

    <LinearLayout
        android:id="@+id/m4ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <AutoCompleteTextView
            android:id="@+id/m4autoCompleteTextView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:hint="@string/rcom" >
		<requestFocus />
            
        </AutoCompleteTextView>

        <ImageButton
            android:id="@+id/m4imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/execute"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout>

    <TextView
        android:id="@+id/m4notification1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/m4ll1"
        android:gravity="center"
        android:minLines="2"
        android:textSize="17sp"
        android:text="@string/note" />

    <TextView
        android:id="@+id/m4commandres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="10dp"
        android:layout_below="@+id/m4notification1"
        android:layout_above="@+id/m4ll2"
        android:layout_marginTop="12dp"
        android:textSize="15sp"
        android:hint="@string/consolenote"
         />

    <LinearLayout
        android:id="@+id/m4ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/m4button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cls" />

        <Button
            android:id="@+id/m4button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_weight="0.5"
            android:text="@string/back" />
    </LinearLayout>

</RelativeLayout>