<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/button"
    tools:context=".Home" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent" />
 
    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls_home"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

          
        </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/m1b1"
                    style="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                	android:layout_marginTop="2dp"    
                    android:layout_weight="0.125"
                    android:background="@drawable/button"
                    android:text="@string/alc" />

                 <Button
                     android:id="@+id/m2b1"
                     style="@style/FullscreenActionBarStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                     android:layout_weight="0.125"
                     android:background="@drawable/button"
                     android:text="@string/search" />
                
                  <Button
                      android:id="@+id/m3b1"
                      style="@drawable/button"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                      android:layout_weight="0.125"
                      android:background="@drawable/button"
                      android:text="@string/inter" />
                  
                  <Button
                      android:id="@+id/m4b1"
                      style="@style/FullscreenActionBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                      android:layout_weight="0.125"
                      android:background="@drawable/button"
                      android:text="@string/tryout" />
                  
                    <Button
                        android:id="@+id/m5b1"
                        style="@style/FullscreenActionBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                        android:layout_weight="0.125"
                        android:background="@drawable/button"
                        android:text="@string/tat" />
                 
                <Button
                    android:id="@+id/m6b1"
                    style="@style/FullscreenActionBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.125"
                    android:background="@drawable/button"
                    android:text="@string/setting" />

                <Button
                    android:id="@+id/m7b1"
                    style="@style/FullscreenActionBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.125"
                    android:background="@drawable/button"
                    android:text="@string/about" />

              <Button
                  android:id="@+id/m8b1"
                  style="@style/FullscreenActionBarStyle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="2dp"
                  android:layout_weight="0.125"
                  android:layout_gravity="bottom"
                  android:text="@string/exit" />
               
            </LinearLayout>

  

    </FrameLayout>

</FrameLayout>
