<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Search" >

    <LinearLayout
        android:id="@+id/m2linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/m2search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
            	android:focusableInTouchMode="false"
                android:hint="@string/m2search" >
                
              <requestFocus android:layout_width="match_parent" />
              
            </EditText>

            <ImageView
                android:id="@+id/m2imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black_overlay"
                android:contentDescription="@string/sr"
                android:src="@android:drawable/ic_menu_search" />
           
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/m2textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:text="@string/sr"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/m2rg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" >

                <RadioButton
                    android:id="@+id/m2r0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/key"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/m2r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alphabet"
                    android:textSize="14sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/m2listView1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_above="@+id/m2linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/m2linearLayout1" >

    </ListView>

    <LinearLayout
        android:id="@+id/m2linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp" >

        <Button
            android:id="@+id/m2button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/tryt" />

        <Button
            android:id="@+id/m2button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/back" />
    </LinearLayout>

</RelativeLayout>