<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ListActivity" >

    <TextView
        android:id="@+id/m1tv1list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/alc" />

    <EditText
        android:id="@+id/m1etlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/m1tv1list"
        android:layout_marginTop="16dp"
        android:hint="@string/alcsrc"
        android:focusableInTouchMode="false"
        android:translationY="-5dp"
        android:ems="10" >
        
        <requestFocus />
  
    </EditText>

    <ListView
        android:id="@+id/m1lv1list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/m1b9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/m1etlist" >
 
    </ListView>

    <Button
        android:id="@+id/m1b9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/back" />

</RelativeLayout>