<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".Quize" >

    <LinearLayout
        android:id="@+id/m5linearLayout1title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/m5fst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/qtite" />

        <TextView
            android:id="@+id/m5timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="#ff0000" />
    </LinearLayout>

    <TextView
        android:id="@+id/m5ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="45dp"
        android:background="@color/gray"
        android:minHeight="45dp"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="invisible"
        />

    <RadioGroup
        android:id="@+id/m5radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/m5ques"
        android:layout_marginTop="30dp" >

        <RadioButton
            android:id="@+id/m5ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:paddingTop="-10dp"
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/m5ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-60dp"
            android:gravity="center"
            
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/m5ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="center"
           
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/m5ans4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-60dp"
            android:gravity="center"
          
            android:visibility="invisible" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/m5linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/m5radioGroup1"
        android:layout_below="@+id/m5radioGroup1"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/m5back"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/back" />

        <Button
            android:id="@+id/m5next"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/next"/>

    </LinearLayout>

    <Button
        android:id="@+id/m5start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/m5linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/start" />

</RelativeLayout>